update resume link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<nav>
                             <ul>
 								<li class=frontlist><a href="#about"><b>About</b></a></li>
-                                <li class=frontlist><a href="#work"><b>Work</b></a></li>
+                                <li class=frontlist><a href="https://github.com/privatezero/Resume"><b>Work</b></a></li>
                                 <li class=frontlist><a href="#projects"><b>Projects</b></a></li>
                                 <li class=frontlist><a href="weaverblog"><b>Blog</b></a></li>
 								<li class=frontlist><a href="#contact"><b>Contact</b></a></li>
@@ -47,127 +47,6 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
-                                <h4 align="center">Andrew Weaver, MLIS</h4>
-                                <h1 id="education">Education</h1>
-                                <p><strong>UNIVERSITY OF WASHINGTON, INFORMATION SCHOOL,</strong> Seattle, WA -- 2015</p>
-                                <p><em>Masters of Library and Information Science</em></p>
-                                <p><strong>UNIVERSITY OF WASHINGTON, JACKSON SCHOOL OF INTERNATIONAL STUDIES,</strong> Seattle, WA -- 2007</p>
-                                <p><em>BA in Japan Studies</em></p>
-                                <hr />
-                                <h1 id="libraryarchives-experience">Library/Archives Experience</h1>
-                                <p>WASHINGTON STATE UNIVERSITY, <strong>Digital Infrastructure and Preservation Librarian</strong></p>
-                                <p>Pullman, WA -- 10/2017-Present</p>
-                                <p>MOVING IMAGE PRESERVATION OF PUGET SOUND, <strong>Consultant</strong></p>
-                                <p>Seattle, WA -- 06/2017-Present</p>
-                                <p>AMERICAN ARCHIVE OF PUBLIC BROADCASTING, <strong>National Digital Stewardship Resident at City University of New York Television</strong></p>
-                                <p>New York, NY -- 07/2016-06/2017</p>
-                                <ul>
-                                <li>Conducted a full survey of Library's compliance with NDSA Levels of preservation and enacted recommendations</li>
-                                <li>Developed a MySQL based system for automated capture of PREMIS, preservation and fixity metadata</li>
-                                <li>Researched and implemented perceptual video hashing for automated cataloging</li>
-                                <li>Revised and wrote micro-service scripts that support core digital and A/V preservation activities</li>
-                                </ul>
-                                <p>UNIVERSITY OF WASHINGTON LIBRARIES MEDIA CENTER, <strong>Digital and Archival Media Technician</strong></p>
-                                <p>Seattle, WA -- 09/2015-07/2016</p>
-                                <ul>
-                                <li>Worked on all stages of media preservation and archiving including: appraisal, description, reformatting, dissemination and digital and physical preservation</li>
-                                <li>Developed scripts and automated systems modeled on the OAIS structure that greatly improved efficiency, accuracy, file integrity and convenience during media digitization and ingest</li>
-                                <li>Trained and supervised staff and graduate/student employees in the execution of media preservation and circulation duties</li>
-                                <li>Provided instruction and reference in all contexts ranging from one-on-one to classroom settings</li>
-                                <li>Designed workflows for large scale digitization projects of analog materials</li>
-                                <li>Conducted collection surveys to analyze preservation needs as well as reformatting potential under section 108 of US Copyright law</li>
-                                </ul>
-                                <p>UNIVERSITY OF WASHINGTON LIBRARIES MEDIA CENTER, <strong>Graduate Reference Specialist</strong></p>
-                                <p>Seattle, WA -- 08/2014-08/2015</p>
-                                <p>UNIVERSITY OF WASHINGTON LIBRARIES SPECIAL COLLECTIONS, <strong>Assistant to Film Archives Specialist</strong></p>
-                                <p>Seattle, WA -- 12/2013-08/2015</p>
-                                <hr />
-                                <h1 id="other-work-experience">Other Work Experience</h1>
-                                <p>ART JAPAN CO. LTD., <strong>Construction Management</strong></p>
-                                <p>Kagoshima, Japan -- 2011-2013</p>
-                                <p>SATSUMA-SENDAI BOARD OF EDUCATION, <strong>English Teacher</strong></p>
-                                <p>Satsuma-Sendai, Japan -- 2007-2009</p>
-                                <hr />
-                                <h1 id="additional-skills">Additional Skills</h1>
-                                <ul>
-                                <li>FFmpeg, DACS, PREMIS, EAD, Git, Ruby, Bash, MySQL, XML, HTML, CSS</li>
-                                <li>High proficiency in Japanese. Spoken level: fluent. Reading/Writing: 3rd year college level</li>
-                                </ul>
-                                <hr />
-                                <h1 id="publications">Publications</h1>
-                                <ul>
-                                <li>Vallier J., Weaver A. (2018) Digital Scholarship and Media. DS’s AV Clubs: UW Media Arcade and MAD Lab. In <em>The Culture of Digital Scholarship in Academic Libraries</em>. Chicago, IL: ALA Editions. (In Press)</li>
-                                <li>Weaver A., Colloton E., McManus K., Chau S., Ramirez-Lopez L., Lott A., Graves T. (2017) Building a Digital Preservation Community in Public Broadcasting: A Case Study of the American Archive of Public Broadcasting’s National Digital Stewardship Residencies. <em>IASA Journal,v47</em>, pp 41-47.</li>
-                                <li>Widzinski L., Mandel, D., Weaver, A., Horbal, A. (2016) Media in the Classroom. <em>Against the Grain,v28</em>(5), pp 32-35.</li>
-                                <li>Lee, J. H., Perti, A., Weaver, A., &amp; Windleharth, T. (2014). UW/SIMM Video Game Metadata Schema: Controlled Vocabulary for Genre. http://gamer.ischool.uw.edu/official_release/</li>
-                                </ul>
-                                <hr />
-                                <h1 id="selected-presentations">Selected Presentations</h1>
-                                <ul>
-                                <li>&quot;Strategies and Outcomes for Public Digitization Events: A Case Study.&quot; AMIA Annual Conference 2018. Portland, OR. 12/01/2018.</li>
-                                <li>&quot;vrecord: An Open Source Case Study.&quot; AMIA Annual Conference 2018. Portland, OR. 12/01/2018.</li>
-                                <li>&quot;Beyond Pressing Play: Tools and Strategies for High Quality Reformatting of Field Recorded Materials.&quot; Northwest Archivists Annual Meeting 2018. Warm Springs, OR. 04/27/2018.</li>
-                                <li>&quot;Collaborative Conversion: Open Tools and Workflows in AV Preservation.&quot; AMIA Annual Conference 2017. New Orleans, LA. 12/02/2017.</li>
-                                <li>&quot;Automation and Similarity: An Introduction to Perceptual Hashing.&quot; AMIA Annual Conference 2017. New Orleans, LA. 12/02/2017.</li>
-                                <li>&quot;Codec Encoding for Lossless Archiving and Realtime Transmission (FLAC Update).&quot; IETF 99. Prague, Czech Republic. 07/21/2017.</li>
-                                <li>&quot;Preservation Showdown: Audiovisual Edition.&quot; ALA Annual Conference 2017. Chicago, IL. 06/25/2017.</li>
-                                <li>&quot;How Open Source Audiovisual Tools Help Archivists (And You Too!).&quot; Open Source Bridge. Portland, OR. 06/21/2017.</li>
-                                <li>&quot;Let's Do it Together! Open Tools and Workflows in A/V Preservation.&quot; Northwest Archivists Annual Meeting 2017. Boise, ID. 05/19/2017.</li>
-                                <li>&quot;Building a Digital Preservation Community in Public Broadcasting: A Case Study of the American Archive of Public Broadcasting’s National Digital Stewardship Residencies.&quot; NDSR Symposium. Washington, DC. 04/27/2017.</li>
-                                <li>&quot;Planning for Preservation in Public Media: An AAPB NDSR Update.&quot; AMIA Annual Conference 2016. Pittsburgh, PA. 11/12/2016.</li>
-                                <li>&quot;Expanding Access Through Music: The Adrian Cowell Films and Research Collection.&quot; <em>Poster</em>. IASA Annual Conference 2016. Washington, DC. 09/27/2016.</li>
-                                <li>&quot;Building a Digital Preservation Community in Public Broadcasting.&quot; IASA Annual Conference 2016. Washington, DC. 09/26/2016.</li>
-                                <li>&quot;Keeping it Real: Providing Access to Physical Collections.&quot; AMIA Annual Conference 2015. Portland, OR. 11/21/2015.</li>
-                                <li>&quot;Expanding Access Through Music: The Adrian Cowell Films and Research Collection.&quot; AMIA Annual Conference 2015. Portland, OR. 11/19/2015.</li>
-                                <li>&quot;Odds and Sods: The Hidden Music of the Adrian Cowell Films and Research Collection.&quot; Fifty Years of Opium and Conflict in the Shan State of Burma: A Visual Retrospective. Seattle, WA. 5/30/2015.</li>
-                                <li>&quot;Odds and Sods: The Hidden Music of the Adrian Cowell Films and Research Collection.&quot; Pacific Northwest Music Librarians Association. Eugene, OR. 5/5/2015.</li>
-                                <li>&quot;Media Archives and Japan Studies Time Based Media.&quot; UW Libraries Japanologists' Colloquium. Seattle, WA. 2/2/2015.</li>
-                                </ul>
-                                <h1 id="selected-guest-lectures">Selected Guest Lectures</h1>
-                                <ul>
-                                <li>&quot;Pop-up Music Memory Event Discussion.&quot; DC Public Library Memory Lab Network Webinar. 08/28/2018</li>
-                                <li>&quot;Demystifying FFmpeg and FFplay.&quot; UCLA Moving Image Archives Studies Bootcamp. 09/20/2017</li>
-                                <li>&quot;Tools and Resources for Multimodal Teaching and Learning.&quot; University of Washington English CIC Program. 11/13/2015.</li>
-                                </ul>
-                                <hr />
-                                <h1 id="grants">Grants</h1>
-                                <p>NEH Research and Development Grant, &quot;DV Rescue,&quot; ($191,835). 2019-2021. Supporting Author</p>
-                                <p>National Film Preservation Foundation Basic Preservation Grant, &quot;Joseph F. Rock Ethnographic and Exploration Film Collection,&quot; ($10,495). 2016. Primary Author</p>
-                                <p>Allen Signature Awards Grant, &quot;Milo Ryan Phonoarchive Digitization Project,&quot; ($65,000). 2016-2017. Supporting Author</p>
-                                <hr />
-                                <h1 id="professional-service">Professional Service</h1>
-                                <ul>
-                                <li>AMIA Open Source Committee Governance Working Group, 11/2018 - Present.</li>
-                                <li>Dspace Leadership Group, 06/2018 - Present.</li>
-                                <li><a href="https://datatracker.ietf.org/wg/cellar/about/">Codec Encoding for LossLess Archiving and Realtime Transmission (CELLAR) Working Group</a>, 2017 - Present.</li>
-                                <li><p>XFR Collective NY, 2016 - 2017.</p></li>
-                                <li>Audiovisual Open Source Projects:
-                                <ul>
-                                <li>Project Maintainer:</li>
-                                </ul>
-                                <p>audiorecorder (https://github.com/amiaopensource/audiorecorder)</p>
-                                <p>ffmprovisr (https://amiaopensource.github.io/ffmprovisr)</p>
-                                <p>pugetsoundandvision (https://github.com/pugetsoundandvision)</p>
-                                <p>Vrecord (https://github.com/amiaopensource/vrecord)</p></li>
-                                </ul>
-                                <h1 id="university-service">University Service</h1>
-                                <ul>
-                                <li>Employee Engagement Working Group, Washington State University Libraries, 2018 - Present</li>
-                                <li>Access Services Committee, University of Washington Libraries, 2015-2016</li>
-                                </ul>
-                                <hr />
-                                <h1 id="selected-additional-trainings-attended">Selected Additional Trainings Attended</h1>
-                                <p>05/09/2015 &quot;Audiovisual Surgery.&quot; Bay Area Video Coalition. San Francisco, CA.</p>
-                                <p>09/2015 - 10/2015 &quot;Copyright for Educators and Librarians.&quot; Duke University/Coursera.</p>
-                                <hr />
-                                <h1 id="professional-affiliations">Professional Affiliations</h1>
-                                <ul>
-                                <li>Northwest Archivists</li>
-                                <li>Association for Recorded Sound Collections</li>
-                                <li>Association of Moving Image Archivists</li>
-                                <li>Seattle Area Archivists</li>
-                                </ul>
 							</article>
 
 						<!-- About -->
